// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resistor 3-band resistor should create 1`] = `
Object {
  "bands": 3,
  "digit1": 1,
  "digit2": 0,
  "digit3": 0,
  "multiplier": 0,
  "tempCoef": 250,
  "tolerance": 10,
}
`;

exports[`Resistor 4-band resistor should create 1`] = `
Object {
  "bands": 4,
  "digit1": 0,
  "digit2": 0,
  "digit3": 0,
  "multiplier": 0,
  "tempCoef": 250,
  "tolerance": 5,
}
`;

exports[`Resistor 5-band resistor should create 1`] = `
Object {
  "bands": 5,
  "digit1": 0,
  "digit2": 0,
  "digit3": 0,
  "multiplier": 0,
  "tempCoef": 250,
  "tolerance": 10,
}
`;

exports[`Resistor 6-band resistor should create 1`] = `
Object {
  "bands": 6,
  "digit1": 0,
  "digit2": 0,
  "digit3": 0,
  "multiplier": 0,
  "tempCoef": 15,
  "tolerance": 5,
}
`;

exports[`Resistor should allow edit and keep old values 1`] = `
Object {
  "bands": 3,
  "digit1": 1,
  "digit2": 0,
  "digit3": 0,
  "multiplier": 0,
  "tempCoef": 250,
  "tolerance": 10,
}
`;

exports[`Resistor should allow edit and keep old values 2`] = `
Object {
  "bands": 6,
  "digit1": 1,
  "digit2": 0,
  "digit3": 3,
  "multiplier": 0,
  "tempCoef": 25,
  "tolerance": 5,
}
`;

exports[`Resistor should allow edit and keep old values 3`] = `
Object {
  "bands": 3,
  "digit1": 1,
  "digit2": 0,
  "digit3": 3,
  "multiplier": 0,
  "tempCoef": 25,
  "tolerance": 5,
}
`;

exports[`Resistor should allow edit and keep old values 4`] = `
Object {
  "bands": 6,
  "digit1": 1,
  "digit2": 0,
  "digit3": 3,
  "multiplier": 0,
  "tempCoef": 25,
  "tolerance": 5,
}
`;

exports[`Resistor should allow edit and reuse of the same instance 1`] = `
Object {
  "bands": 3,
  "digit1": 1,
  "digit2": 0,
  "digit3": 0,
  "multiplier": 0,
  "tempCoef": 250,
  "tolerance": 10,
}
`;

exports[`Resistor should allow edit and reuse of the same instance 2`] = `
Object {
  "bands": 3,
  "digit1": 1,
  "digit2": 3,
  "digit3": 0,
  "multiplier": 0,
  "tempCoef": 250,
  "tolerance": 10,
}
`;

exports[`Resistor should return list of multipliers 1`] = `
Array [
  Object {
    "color": "black",
    "value": 0,
  },
  Object {
    "color": "brown",
    "value": 1,
  },
  Object {
    "color": "red",
    "value": 2,
  },
  Object {
    "color": "orange",
    "value": 3,
  },
  Object {
    "color": "yellow",
    "value": 4,
  },
  Object {
    "color": "green",
    "value": 5,
  },
  Object {
    "color": "blue",
    "value": 6,
  },
  Object {
    "color": "violet",
    "value": 7,
  },
  Object {
    "color": "gray",
    "value": 8,
  },
  Object {
    "color": "white",
    "value": 9,
  },
  Object {
    "color": "gold",
    "value": -1,
  },
  Object {
    "color": "silver",
    "value": -2,
  },
]
`;

exports[`Resistor should return list of significant digits 1`] = `
Array [
  Object {
    "color": "black",
    "value": 0,
  },
  Object {
    "color": "brown",
    "value": 1,
  },
  Object {
    "color": "red",
    "value": 2,
  },
  Object {
    "color": "orange",
    "value": 3,
  },
  Object {
    "color": "yellow",
    "value": 4,
  },
  Object {
    "color": "green",
    "value": 5,
  },
  Object {
    "color": "blue",
    "value": 6,
  },
  Object {
    "color": "violet",
    "value": 7,
  },
  Object {
    "color": "gray",
    "value": 8,
  },
  Object {
    "color": "white",
    "value": 9,
  },
]
`;

exports[`Resistor should return list of temperature coefficients 1`] = `
Array [
  Object {
    "color": "black",
    "value": 250,
  },
  Object {
    "color": "brown",
    "value": 100,
  },
  Object {
    "color": "red",
    "value": 50,
  },
  Object {
    "color": "orange",
    "value": 15,
  },
  Object {
    "color": "yellow",
    "value": 25,
  },
  Object {
    "color": "green",
    "value": 20,
  },
  Object {
    "color": "blue",
    "value": 10,
  },
  Object {
    "color": "violet",
    "value": 5,
  },
  Object {
    "color": "gray",
    "value": 1,
  },
]
`;

exports[`Resistor should return list of tolerances 1`] = `
Array [
  Object {
    "color": "brown",
    "value": 1,
  },
  Object {
    "color": "red",
    "value": 2,
  },
  Object {
    "color": "green",
    "value": 0.5,
  },
  Object {
    "color": "blue",
    "value": 0.25,
  },
  Object {
    "color": "violet",
    "value": 0.1,
  },
  Object {
    "color": "gold",
    "value": 5,
  },
  Object {
    "color": "silver",
    "value": 10,
  },
]
`;

exports[`Resistor should sanitize properties to expected type 1`] = `
Object {
  "bands": 3,
  "digit1": 1,
  "digit2": 0,
  "digit3": 0,
  "multiplier": 0,
  "tempCoef": 250,
  "tolerance": 10,
}
`;

exports[`Resistor should sanitize properties to expected type 2`] = `
Object {
  "bands": 5,
  "digit1": 1,
  "digit2": 0,
  "digit3": 3,
  "multiplier": 0,
  "tempCoef": 250,
  "tolerance": 5,
}
`;
